--- a/calculator.html
+++ b/calculator.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <link rel="stylesheet" href="calculator.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>Calculator</title>
 </head>
 <body>
-$END$
+    <h1 id="main-heading">DIY Calculator</h1>
+    <div id="display-pane">
+        <div id="operations"></div>
+        <div id="result"></div>
+    </div>
+    <div id="calculator">
+        <div id="number-7" class="numbers buttons">7</div>
+        <div id="number-8" class="numbers buttons">8</div>
+        <div id="number-9" class="numbers buttons">9</div>
+        <div id="power" class="operators buttons">**</div>
+        <div id="sqrt" class="operators buttons">√</div>
+        <div id="number-4" class="numbers buttons">4</div>
+        <div id="number-5" class="numbers buttons">5</div>
+        <div id="number-6" class="numbers buttons">6</div>
+        <div id="multiply" class="operators buttons">*</div>
+        <div id="divide" class="operators buttons">/</div>
+        <div id="number-1" class="numbers buttons">1</div>
+        <div id="number-2" class="numbers buttons">2</div>
+        <div id="number-3" class="numbers buttons">3</div>
+        <div id="add" class="operators buttons">+</div>
+        <div id="subtract" class="operators buttons">-</div>
+        <div id="number-0" class="numbers buttons">0</div>
+        <div id="period" class="buttons extra">.</div>
+        <div id="reverse" class="extra">+/-</div>
+        <div id="clear" class="extra">CE</div>
+        <div id="equals" class="extra">=</div>
+    </div>
+    <script rel="script" src="calculator.js"></script>
 </body>
 </html>
