--- a/calculator.html
+++ b/calculator.html
@@ -9,28 +9,28 @@
 </head>
 <body>
     <h1 id="main-heading">DIY Calculator</h1>
-    <div id="display-pane">
+    <div id="display-panel">
         <div id="operations"></div>
         <div id="result"></div>
     </div>
     <div id="calculator">
-        <div id="number-7" class="numbers buttons">7</div>
-        <div id="number-8" class="numbers buttons">8</div>
-        <div id="number-9" class="numbers buttons">9</div>
-        <div id="power" class="operators buttons">**</div>
-        <div id="sqrt" class="operators buttons">√</div>
-        <div id="number-4" class="numbers buttons">4</div>
-        <div id="number-5" class="numbers buttons">5</div>
-        <div id="number-6" class="numbers buttons">6</div>
-        <div id="multiply" class="operators buttons">*</div>
-        <div id="divide" class="operators buttons">/</div>
-        <div id="number-1" class="numbers buttons">1</div>
-        <div id="number-2" class="numbers buttons">2</div>
-        <div id="number-3" class="numbers buttons">3</div>
-        <div id="add" class="operators buttons">+</div>
-        <div id="subtract" class="operators buttons">-</div>
-        <div id="number-0" class="numbers buttons">0</div>
-        <div id="period" class="buttons extra">.</div>
+        <div id="digit-7" class="digits calculator-buttons">7</div>
+        <div id="digit-8" class="digits calculator-buttons">8</div>
+        <div id="digit-9" class="digits calculator-buttons">9</div>
+        <div id="power" class="operators calculator-buttons">**</div>
+        <div id="sqrt" class="operators calculator-buttons">√</div>
+        <div id="digit-4" class="digits calculator-buttons">4</div>
+        <div id="digit-5" class="digits calculator-buttons">5</div>
+        <div id="digit-6" class="digits calculator-buttons">6</div>
+        <div id="multiply" class="operators calculator-buttons">*</div>
+        <div id="divide" class="operators calculator-buttons">/</div>
+        <div id="digit-1" class="digits calculator-buttons">1</div>
+        <div id="digit-2" class="digits calculator-buttons">2</div>
+        <div id="digit-3" class="digits calculator-buttons">3</div>
+        <div id="add" class="operators calculator-buttons">+</div>
+        <div id="subtract" class="operators calculator-buttons">-</div>
+        <div id="digit-0" class="digits calculator-buttons">0</div>
+        <div id="period" class="calculator-buttons extra">.</div>
         <div id="reverse" class="extra">+/-</div>
         <div id="clear" class="extra">CE</div>
         <div id="equals" class="extra">=</div>
